--- a/Landing_page.html
+++ b/Landing_page.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body> 
+    <h2><p><b>HI MINA-SAN WELCOME TO MY LANDING PAGE!</b></p>
    <h2> <a href ="Home.html">Home</a></h2>
    <h2> <a href ="About.html">About</a></h2>
    <h2> <a href ="Services.html">Services</a></h2>
