--- a/Blog.html
+++ b/Blog.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <p><b><h2>HI DOL WELCOME MAO RAJD NI AY NA PANGITAG LAIN!</h2></b></p>
+    <p><b><h2>HI DOL WELCOME!</h2></b></p>
+
+    <img src="tf.jpg" alt="image"/> <br>
+    <video src="WIN_20250130_17_23_58_Pro.mp4" width="400" height="200" controls ></video>
+     <audio src="music.mp4" controls></audio> 
+
+  
     <h2> <a href ="Landing_page.html">Back</a></h2>
 </body>
 </html>
