--- a/Contact.html
+++ b/Contact.html
@@ -6,7 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <p><b><h2> PALIHOG KOG CONTACT NI NONO OG NAA KAY KAYLANGAN MAO NI IYA NUMBER<br>09754150236</h2></b></p>
+    <p><b><h2> PALIHOG KOG CONTACT NI NONO OG NAA KAY KAYLANGAN MAO NI IYA NUMBER<br></h2></b></p>
+    <dd><h2>Contact</h2></dd>
+
+    <table>
+        <thead>
+        <tr>
+        <th>smart</th>
+        <th>globe</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr>
+        <td>09518531486</td>
+        <td>09754150236</td>
+            </tr>
+        </tbody>
+    </table>
     <h2> <a href ="Landing_page.html">Back</a></h2>
 </body>
 </html>
