--- a/Landing_page.html
+++ b/Landing_page.html
@@ -6,12 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <h2><p><b>HI MINA-SAN WELCOME TO MY LANDING PAGE!</b></p></h2>
    <h2> <a href ="Home.html">Home</a></h2>
    <h2> <a href ="About.html">About</a></h2>
    <h2> <a href ="Services.html">Services</a></h2>
    <h2> <a href ="Pages.html">Pages</a></h2>
    <h2> <a href ="Contact.html">Contact</a></h2>
    <h2><a href ="Blog.html">Blog</a></h2>
-    
+   <h2> <a href ="Menu.html">Menu</a></h2>
 </body>
 </html>
